[System.Serializable]
public class WordData
{
    public int id;
    public string name;
    public int dictionaryid;
}